--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
     <div class="signInForm">
         <button id="closeSignInFormButton" class="closeSignInFormButton">&times;</button>
         <h2>Sign In</h2>
-        <form>
+        <form id="signInForm">
             <div class="emailLabelGroup">
                 <label for="email">Email:</label><input type="email" id="email" placeholder="Enter Email" required>
                 <p id="emailMessageResult"></p>
@@ -591,13 +591,15 @@
             <div class="passwordLabelGroup">
                 <label for="password">Password:</label>
                 <div class="passwordInput">
-                    <input type="password" id="password" placeholder="Enter Password" required><i class="mainEye fa-solid fa-eye" id="togglePassword"></i>
+                    <div class="passwordInputAndEye">
+                    <input type="password" class="passwordSignIn" placeholder="Enter Password" required><i class="mainEye fa-solid fa-eye"></i>
+                    </div>
                     <p id="passwordMessageResult"></p>
                 </div>
             </div>
-            <button type="button" id="signInButton" onclick="signInSuccessful()">Sign In</button>
+            <button id="signInButton" onclick="signInSuccessful()">Sign In</button>
             <p id="finalSignInMessage"></p>
-            <p class="noAccount">No account yet? <a href="javascript:void(0)" onclick="openSignUp()">Sign Up</a></p>
+            <p class="noAccount">No account yet? <a href="#" class="signUp">Sign Up</a></p>
         </form>
     </div>
 </div>
@@ -609,17 +611,21 @@
     <div class="signUpForm">
         <button id="closeSignUpFormButton" class="closeSignUpFormButton">&times;</button>
         <h2>Sign Up</h2>
-        <form>
+        <form id="signUpForm">
             <div class="emailLabelGroup">
                 <label for="email">Email:</label><input type="email" id="email" placeholder="Enter Email" required>
             </div>
             <div class="passwordLabelGroup">
                 <label for="password">Password:</label>
-                    <input type="password" class="password" placeholder="Enter Password" required><i class="firstEye fa-solid fa-eye" class="togglePasswordSignUp"></i>
+                <div class="firstPasswordWrapper">
+                    <input type="password" class="password" placeholder="Enter Password" required><i class="firstEye fa-solid fa-eye"></i>
+                </div>
             </div>
             <div class="passwordLabelGroupRepeat">
                 <label for="password">Re-enter Password:</label>
-                <input type="password" class="password" placeholder="Re-enterPassword" required><i class="secondEye fa-solid fa-eye" class="togglePasswordSignUp"></i>
+                <div class="secondPasswordWrapper">
+                <input type="password" class="passwordSecond" placeholder="Re-enterPassword" required><i class="secondEye fa-solid fa-eye"></i>
+                </div>
             </div>
             <div class="tcGroup">
                 <input type="checkbox">
@@ -638,11 +644,10 @@
 
 
 
-<script src="/JS FOLDER/backtotop.js"></script>
-<script src="/JS FOLDER/signIn&signUpFORM.js"></script>
-<script src="/JS FOLDER/showhidePASSWORD&SignInButton.js"></script>
-<script src="/JS FOLDER/cartBadge&ADDTOCART.js"></script>
-<script src="/JS FOLDER/open&closeCart.js"></script>
-<script src="/JS FOLDER/openBurger.js"></script>
+<script src="/JS FOLDER/backtotop.js" defer></script>
+<script src="/JS FOLDER/signIn&signUpFORM.js" defer></script>
+<script src="/JS FOLDER/cartBadge&ADDTOCART.js" defer></script>
+<script src="/JS FOLDER/open&closeCart.js" defer></script>
+<script src="/JS FOLDER/openBurger.js" defer></script>
 </body>
 </html>
